[NTP] Remove invert color function for new tab page

NTP will not invert the color back to white when we set invert color
scheme on system setting. This can not only make the default background
color change according to the system setting but also  avoid weird color
on both themes and custom backgrounds. Notice that, only windows has the
invert color setting.

Screencast:
https://screencast.googleplex.com/cast/NjI0ODU4OTI2NTIwNzI5NnxhYzdiNWI3YS04NQ

Bug: 802186
Change-Id: Icd64f1350b8014d15107c565785b612ae9febe2e
Reviewed-on: https://chromium-review.googlesource.com/1241156
Reviewed-by: Kristi Park <kristipark@chromium.org>
Reviewed-by: Ramya Nagarajan <ramyan@chromium.org>
Commit-Queue: Weilun Shi <sweilun@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593679}
Former-commit-id: 3bfc1485458f614ce0e0e953fd3a2942b13f72a0